--- a/login/style/media-queries.css
+++ b/login/style/media-queries.css
@@ -9,20 +9,21 @@ Desktop: 992px até 1200px
 Grandes telas: + de 1200px
 */
 
+/*Tablet*/
 @media screen and (min-width: 768px) and (max-width: 992px) {
     h1{
         padding: 10px;
+        font-size: 35px;
     }
 
     section#loginid{
-        height: 350px;
         width: 80vw;
         transition: width 1s, height 1s;
         transition-timing-function: ease;
     }
 
     div#imageid{
-        height: 100%;
+        height: 250px;
         width: 40%;
         border-radius: 15px 0px 0px 15px;
       }
@@ -46,22 +47,100 @@ Grandes telas: + de 1200px
         float: right;
     }
 
+    div#buttonarea{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btnforgot{
+        width: 49%;
+        margin-top: 20px;
+    } 
+
     input.btn{
         padding: 10px;
-        top: 170px;
-        width: 60%;
+        width: 49%;
+    }
+
+    span{
+        transform: scale(1.2) ;
+    }
+
+       
+}
+
+/*Desktop*/
+@media screen and (min-width: 993px) and (max-width: 1200px){
+
+    h1{
+        padding: 10px;
+        font-size: 40px;
+        margin-bottom: 60px;
+    }
+
+    section#loginid{
+        width: 80vw;
+        transition: width 1s, height 1s;
+        transition-timing-function: ease;
+    }
+
+    div#imageid{
+        height: 400px;
+        width: 50%;
+        border-radius: 15px 0px 0px 15px;
       }
       
-      .btnforgot{
-        top: 167px;
-        width: 60%;
-      }  
-}
+    div#formularioid{
+        height: 400px;
+        border-radius: 0px 15px 15px 0px;
+        width: 50%;
+    }
 
-@media screen and (min-width: 993px) and (max-width: 1200px){
+    input.data{
+        margin-left: 3px;
+        padding: 7px;
+        width: 80%;
+    }
+
+    section#loginid > div#imageid {
+        float: left;
+    }
     
+    section#loginid > div#formularioid {
+        float: right;
+    }
+
+    div#buttonarea{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btnforgot{
+        width: 60%;
+        margin-top: 110px;
+    } 
+
+    input.btn{
+        padding: 10px;
+        width: 60%;
+    }
+
+    span{
+        transform: scale(1.3);
+    }
+
+    footer{
+        font-size: 15px;
+      }
+      
+      footer a{
+        font-size: 15px;
+      }
 }
 
+/*Tv Etc...*/
 @media screen and (min-width: 1201px){
     
 }
