--- a/login/style/style.css
+++ b/login/style/style.css
@@ -1,6 +1,7 @@
 /* Configurações */
 
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root{
   --cor1: #50175E;
@@ -35,13 +36,13 @@
 /*-----------------------------------------------------------*/
 
 body{
+  /*background-image: linear-gradient(var(--cor1),var(--cor3));*/
   background: url(../img/fundo-1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: fixed;
   width: 100vw;
   height: 100vh;
-
 }
 
 #loginid{
@@ -51,7 +52,7 @@ body{
   transform: translate(-50%, -50%);
   margin: auto;
   transform: translate();
-  box-shadow: 5px 5px #28002e7c;
+  box-shadow: 4px 4px 10px #0d000f69;
   border-end-end-radius: 5px;
   border-end-start-radius: 5px;
   border-start-end-radius: 5px;
@@ -70,7 +71,6 @@ div#imageid{
 
 #formularioid{
   width: 250px;
-  height: 250px;
   background-color: #fdfdfd;
   border-radius: 0px 0px 15px 15px;
   box-sizing: border-box;
@@ -79,9 +79,12 @@ div#imageid{
 }
 
 h1{
+  font-size: 30px;
   color: var(--cor3);
   text-align: center;
   padding: 2px;
+  font-family: 'League Spartan', sans-serif;
+  font-weight: 900;
 }
 
 span{
@@ -91,17 +94,22 @@ span{
 }
 
 input.data{
-  padding: 5px;
+  padding: 7px 5px 7px 5px;
   width: 81%;
-  border-radius: 5px;
+  border-radius: 7px;
   border-color: var(--cor3);
   border-top-color: var(--cor3);
   border-left-color: var(--cor3);
   border-right-color: var(--cor3);
 }
 
+div#buttonarea{
+  width: 100%;
+
+}
+
 .btnforgot{
-  padding: 10px;
+  padding: 7px 10px 7px 10px;
   width: 100%;
   border-radius: 7px;
   background-color: white;
@@ -110,17 +118,17 @@ input.data{
   font-size: 0.9rem;
   font-weight: 900;
   cursor: pointer;
-  
+  margin-top: 10px;
 }
 
 .btnforgot:hover{
-  background-color: var(--cor5);
+  background-color: var(--cor3);
   color: white;
-  transition: 0.3s;
+  transition: 0.8s;
 }
 
 input.btn{
-  padding: 10px;
+  padding: 7px 10px 7px 10px;
   width: 100%;
   border-radius: 7px;
   background-color: var(--cor1);
@@ -132,6 +140,31 @@ input.btn{
 }
 
 input.btn:hover{
-  background-color: var(--cor4);
-  transition: 0.4s;
+  background-color: var(--cor3);
+  transition: 0.8s;
+}
+
+footer{
+  font-size: 15px;
+  color: var(--cor1);
+  position: absolute;
+  bottom: 4px;
+  margin: auto;
+  text-align: center;
+  width: 100vw;
+  text-shadow: 1px 1px 1px var(--cor3);
+}
+
+footer a{
+  font-size: 15px;
+  text-decoration: none;
+  color: #A8265D;
+  text-shadow: none;
+  cursor: pointer;
+}
+
+footer a:hover{
+  color: var(--cor5);
+  transition: 0.5s;
+  text-shadow: none;
 }
