--- a/login/style/media-queries.css
+++ b/login/style/media-queries.css
@@ -142,5 +142,69 @@ Grandes telas: + de 1200px
 
 /*Tv Etc...*/
 @media screen and (min-width: 1201px){
+    h1{
+        padding: 10px;
+        font-size: 40px;
+        margin-bottom: 60px;
+    }
+
+    section#loginid{
+        width: 80vw;
+        transition: width 1s, height 1s;
+        transition-timing-function: ease;
+    }
+
+    div#imageid{
+        height: 400px;
+        width: 50%;
+        border-radius: 15px 0px 0px 15px;
+      }
+      
+    div#formularioid{
+        height: 400px;
+        border-radius: 0px 15px 15px 0px;
+        width: 50%;
+    }
+
+    input.data{
+        margin-left: 3px;
+        padding: 7px;
+        width: 80%;
+    }
+
+    section#loginid > div#imageid {
+        float: left;
+    }
     
+    section#loginid > div#formularioid {
+        float: right;
+    }
+
+    div#buttonarea{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btnforgot{
+        width: 60%;
+        margin-top: 110px;
+    } 
+
+    input.btn{
+        padding: 10px;
+        width: 60%;
+    }
+
+    span{
+        transform: scale(1.3);
+    }
+
+    footer{
+        font-size: 15px;
+      }
+      
+      footer a{
+        font-size: 15px;
+      }
 }
