--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -9,92 +9,89 @@ Desktop: 992px até 1200px
 Grandes telas: + de 1200px
 */
 
-/*Tablet*/
-@media screen and (min-width: 768px) and (max-width: 992px) {
-    h1{
-        padding: 10px;
-        font-size: 35px;
-    }
-
-    section#loginid{
-        width: 80vw;
-        transition: width 1s, height 1s;
-        transition-timing-function: ease;
-    }
-
-    div#imageid{
-        height: 250px;
-        width: 40%;
-        border-radius: 15px 0px 0px 15px;
+@media screen and (min-width: 550px) and (max-width: 768px){
+    article#astronaut-image{
+        width: 55vw;
+        height: 40vh;
       }
       
-    div#formularioid{
-        height: 100%;
-        border-radius: 0px 15px 15px 0px;
-        width: 60%;
-    }
+      article#form-article{
+        width: 55vw;
+        height: 40vh;
+      }
 
     input.data{
-        padding: 7px;
-        width: 80%;
+        width: 85%;
     }
 
-    section#loginid > div#imageid {
-        float: left;
-    }
-    
-    section#loginid > div#formularioid {
-        float: right;
-    }
+    .btnforgot{
+        width: 70%;
+    } 
 
+    input.btn{
+        padding: 10px;
+        width: 70%;
+    }
     div#buttonarea{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+}
 
+@media screen and (min-width: 768px) and (max-width: 1200px){
     .btnforgot{
-        width: 49%;
-        margin-top: 20px;
+        width: 40%;
     } 
 
     input.btn{
         padding: 10px;
-        width: 49%;
+        width: 40%;
     }
-
-    span{
-        transform: scale(1.2) ;
-    }
-
-       
 }
 
-/*Desktop*/
-@media screen and (min-width: 993px) and (max-width: 1200px){
+@media screen and (min-width: 768px){
 
     h1{
         padding: 10px;
         font-size: 40px;
-        margin-bottom: 60px;
     }
 
-    section#loginid{
+    section{
         width: 80vw;
         transition: width 1s, height 1s;
         transition-timing-function: ease;
     }
 
-    div#imageid{
-        height: 400px;
+    article#astronaut-image{
+        height: 80vh;
         width: 50%;
+        display: flex;
+        justify-content: space-between;
         border-radius: 15px 0px 0px 15px;
-      }
+    }
       
-    div#formularioid{
-        height: 400px;
+    article#form-article{
+        height: 80vh;
         border-radius: 0px 15px 15px 0px;
         width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    div#input-area{
+        display: flex;
+        flex-direction: column;
+    }
+
+    div#email-area,div#password-area{
+        display: flex;
+        justify-content: center;
+
+    }
+    label{
+        margin-right: 5px;
     }
 
     input.data{
@@ -103,11 +100,11 @@ Grandes telas: + de 1200px
         width: 80%;
     }
 
-    section#loginid > div#imageid {
+    section > article#astronaut-image {
         float: left;
     }
     
-    section#loginid > div#formularioid {
+    section > article#form-article {
         float: right;
     }
 
@@ -119,7 +116,6 @@ Grandes telas: + de 1200px
 
     .btnforgot{
         width: 60%;
-        margin-top: 110px;
     } 
 
     input.btn{
@@ -133,78 +129,21 @@ Grandes telas: + de 1200px
 
     footer{
         font-size: 15px;
-      }
+    }
       
-      footer a{
+    footer a{
         font-size: 15px;
-      }
+    }
+    
 }
 
-/*Tv Etc...*/
+
 @media screen and (min-width: 1201px){
     h1{
-        padding: 10px;
-        font-size: 40px;
-        margin-bottom: 60px;
-    }
-
-    section#loginid{
-        width: 80vw;
-        transition: width 1s, height 1s;
-        transition-timing-function: ease;
-    }
-
-    div#imageid{
-        height: 400px;
-        width: 50%;
-        border-radius: 15px 0px 0px 15px;
-      }
-      
-    div#formularioid{
-        height: 400px;
-        border-radius: 0px 15px 15px 0px;
-        width: 50%;
-    }
-
-    input.data{
-        margin-left: 3px;
-        padding: 7px;
-        width: 80%;
-    }
-
-    section#loginid > div#imageid {
-        float: left;
-    }
-    
-    section#loginid > div#formularioid {
-        float: right;
-    }
-
-    div#buttonarea{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .btnforgot{
-        width: 60%;
-        margin-top: 110px;
-    } 
-
-    input.btn{
-        padding: 10px;
-        width: 60%;
+        font-size: 3rem;
     }
 
     span{
-        transform: scale(1.3);
+        font-size: 3rem;
     }
-
-    footer{
-        font-size: 15px;
-      }
-      
-      footer a{
-        font-size: 15px;
-      }
 }
