switched to MongoDB Atlas and folder architecture restructure

--- a/public/style/home.css
+++ b/public/style/home.css
@@ -97,6 +97,10 @@ div.post i{
     right: -96%;
 }
 
+.bi{
+    cursor: pointer;    
+}
+
 /*-----------------------------------------------------------------------------------*/
 
 div#add-post-btn{
